k8s/prefix-strip-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ingress-stripprefix
spec:
  stripPrefix:
    prefixes:
      - /api
