k8s/prefix-vespa-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: ingress-stripprefix-vespa
spec:
  stripPrefix:
    prefixes:
      - /vespa
